--- a/WhatFlix.Api/WhatFlix.Api.csproj
+++ b/WhatFlix.Api/WhatFlix.Api.csproj
@@ -8,13 +8,15 @@
 <Folder Include="wwwroot/" />
 </ItemGroup>
 <ItemGroup>
+  <PackageReference Include="Microsoft.AspNetCore.App" />
+  <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   <PackageReference Include="CsvHelper" Version="12.2.3" />
-  <PackageReference Include="Entityframework" Version="6.4.0" />
+  <!-- <PackageReference Include="Entityframework" Version="6.4.0" /> -->
 
-  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.0" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.0" />
   <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-  <PackageReference Include="System.Data.OleDb" Version="4.7.0" />
+  <!-- <PackageReference Include="System.Data.OleDb" Version="4.7.0" /> -->
 </ItemGroup>
 
 </Project>
