--- a/WhatFlix.Api/WhatFlix.Api.csproj
+++ b/WhatFlix.Api/WhatFlix.Api.csproj
@@ -17,6 +17,8 @@
   <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.0" />
   <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
+  <!-- Azure Cosmos Db -->
+  <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.6.0" />
   <!-- <PackageReference Include="System.Data.OleDb" Version="4.7.0" /> -->
 </ItemGroup>
 
